# tree-sitter-zathurarc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  shell.nix  tree-sitter-zathurarc-scm-1.rockspec  tree-sitter.json
.github/workflows/: main.yml
bindings/c/: tree-sitter-zathurarc.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/java/main/io/github/treesitter/jtreesitter/zathurarc/: TreeSitterZathurarc.java
bindings/java/test/: TreeSitterZathurarcTest.java
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_muttrc/: __init__.py
bindings/python/tree_sitter_zathurarc/: __init__.py  __main__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZathurarc/: zathurarc.h
bindings/swift/TreeSitterZathurarcTests/: TreeSitterZathurarcTests.swift
bindings/zig/: root.zig  test.zig
queries/: highlights.scm  injections.scm  schema.scm  textobjects.scm
scripts/: build.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: example.txt  map.txt
tests/: test___init__.py  zathurarc
